--- a/adminapp/pom.xml
+++ b/adminapp/pom.xml
@@ -23,7 +23,10 @@
     <artifactId>springdoc-openapi-ui</artifactId>
     <version>1.6.4</version>
 </dependency>
-
+<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
